# src/swagger/swagger.json
@@ -3456,10 +3456,47 @@
         ],
         "responses": {
           "200": {
-            "description": "A list of banners"
+            "description": "A list of questions"
           },
           "404": {
-            "description": "Banners not found"
+            "description": "Questions not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/qa/contest/ranks": {
+      "get": {
+        "tags": ["QA"],
+        "summary": "Get contest ranks entries",
+        "parameters": [
+          {
+            "name": "contestFilter",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Contest ID add"
+          },
+          {
+            "name": "qaFilter",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            },
+            "description": "QA ID add"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of ranks"
+          },
+          "404": {
+            "description": "Ranks not found"
           },
           "500": {
             "description": "Internal server error"
